[package]
name = "cowonverter"
version = "2.5.0"
authors = ["Bensatankki <axel.hartikainen1@gmail.com>"]
edition = "2018"
description = "A library to owo-ify text files. provides a simple function for this purpose."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bensatankki/cowonverter"

[lib]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
